--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "functional-js",
   "version": "1.0.0",
   "scripts": {
-    "tsc": "tsc -w"
+    "tsc": "tsc -w",
+    "1 node": "node dist/3-4_methodChain.js"
   },
   "dependencies": {
     "@types/node": "^14.14.20",
