--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@types/node": "^14.14.20",
+    "@types/ramda": "^0.27.34",
+    "ramda": "^0.27.1",
     "typescript": "^4.1.3"
   }
 }
