--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "tsc": "tsc -w",
-    "1 node": "node dist/curry.js"
+    "curry": "node dist/curry.js",
+    "partial": "node dist/partial.js"
   },
   "dependencies": {
     "@types/node": "^14.14.20",
