--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "tsc": "tsc -w",
-    "curry": "node dist/curry.js",
-    "partial": "node dist/partial.js"
+    "compose": "node dist/compose.js",
+    "prototype": "node dist/prototype.js"
   },
   "dependencies": {
     "@types/node": "^14.14.20",
