--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "tsc": "tsc -w",
     "compose": "node dist/compose.js",
-    "prototype": "node dist/prototype.js"
+    "pipe": "node dist/pipe.js"
   },
   "dependencies": {
     "@types/node": "^14.14.20",
