--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "tsc": "tsc -w",
     "maybe": "node dist/maybe.js",
-    "nestedFunctor": "node dist/functorNested.js"
+    "either": "node dist/either.js"
   },
   "dependencies": {
     "@types/node": "^14.14.20",
