--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "tsc": "tsc -w",
-    "fs": "node dist/fs.js",
+    "IO": "node dist/IO.js",
     "either": "node dist/either.js"
   },
   "dependencies": {
