--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "scripts": {
     "tsc": "tsc -w",
-    "IO": "node dist/IO.js",
+    "fp-ts-either": "node dist/fp-ts-either.js",
     "action": "node dist/action.js"
   },
   "dependencies": {
     "@types/node": "^14.14.20",
     "@types/ramda": "^0.27.34",
+    "fp-ts": "^2.9.3",
     "ramda": "^0.27.1",
     "typescript": "^4.1.3"
   }
