--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "tsc": "tsc -w",
-    "fp-ts-either": "node dist/fp-ts-either.js",
+    "promiseAll": "node dist/promiseAll.js",
     "action": "node dist/action.js"
   },
   "dependencies": {
@@ -11,6 +11,10 @@
     "@types/ramda": "^0.27.34",
     "fp-ts": "^2.9.3",
     "ramda": "^0.27.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "@types/winston": "^2.4.4"
   }
 }
